--- a/src/main/resources/pool_conf.properties
+++ b/src/main/resources/pool_conf.properties
@@ -1,5 +1,5 @@
 
-db.driver=com.mysql.jdbc.Driver
+db.driver=com.mysql.cj.jdbc.Driver
 db.url=jdbc:mysql://localhost:3306/airlinesDB?useUnicode=yes&characterEncoding=UTF-8  
 db.user=root
 db.password=12345678
